--- a/auth_shop/templates/auth_shop/signin.html
+++ b/auth_shop/templates/auth_shop/signin.html
@@ -1,6 +1,4 @@
 {% load static %}
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,8 +15,6 @@
     <link type="text/css" href={% static "css/util.css" %} rel="stylesheet"/>
     <link type="text/css" href={% static "css/style.css" %} rel="stylesheet"/>
 </head>
-
-
 {#body section#}
 <body>
 <div class="limiter">
@@ -27,36 +23,27 @@
             <div class="login100-pic js-tilt" data-tilt>
                 <img src={% static "pics/img-01.png" %} alt="IMG">
             </div>
-            <form class="login100-form validate-form" method="post" action="{% url 'login' %}">
+            <form class="login100-form validate-form" method="post" action="{% url 'signin' %}">
                 {% csrf_token %}
                 <br>
-                <span class="login100-form-title">ورود به ناحیه کاربری</span> <!-- Form Title -->
-                <div class="wrap-input100 validate-input" data-validate="لطفا پست الکترونیک خود را وارد کنید!">
-                    {{ login_form.email }}
+                <span class="login100-form-title">ثبت نام کاربر جدید</span> <!-- Form Title -->
 
-{#                    <input class="input100" type="text" name="email" placeholder="پست الکترونیک">#}
-                    <span class="focus-input100"></span>
-                    <span class="symbol-input100"><i class="fa fa-envelope" aria-hidden="true"></i></span>
-                </div>
-                <div class="wrap-input100 validate-input" data-validate="لطفا رمز عبور را وارد کنید!">
-                    {{ login_form.password }}
+                {% for field in signin_form %}
+                    <div class="wrap-input100 validate-input" data-validate="لطفا {{ field.label }} خود را وارد کنید!">
+                        {{ field }}
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100"><i class="fa fa-envelope" aria-hidden="true"></i></span>
+                    </div>
+                {% endfor %}
 
-{#                    <input class="input100" type="password" name="pass" placeholder="رمز عبور">#}
-                    <span class="focus-input100"></span>
-                    <span class="symbol-input100"><i class="fa fa-lock" aria-hidden="true"></i></span>
-                </div>
+
                 <div class="container-login100-form-btn">
-                    <button class="login100-form-btn">ورود</button>
+                    <button class="login100-form-btn">ثبت نام</button>
                 </div>
-                {#                <div class="text-center p-t-12">#}
-                {#                    <a class="txt2" href="#">#}
-                {#                        بازگردانی رمز عبور!#}
-                {#                    </a>#}
-                {#                </div>#}
                 <div class="text-center p-t-136">
-                    <a class="txt2" href="{% url 'signin' %}">
+                    <a class="txt2" href="{% url 'login' %}">
                         <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-                        هنوز ثبت نام نکرده اید ؟
+                        قبلا ثبت نام کرده اید ؟
                     </a>
                 </div>
             </form>
