--- a/templates/base/partial/header.html
+++ b/templates/base/partial/header.html
@@ -113,8 +113,14 @@
                             <a href="#"><span class="zocial-apple"></span></a>
                         </div>
                         <div class="register">
-                            <a href="#loginModal" role="button" data-toggle="modal">ورود</a> یا
-                            <a href="#registerModal" role="button" data-toggle="modal">ثبت نام</a>
+
+                            {% if request.user.is_authenticated %}
+                                <p>{{ request.user.first_name }} {{ request.user.last_name }}</p>
+                                <a href="{% url 'logout' %}" role="button" data-toggle="modal">حروج</a>
+                            {% else %}
+                                <a href="{% url 'login' %}" role="button" data-toggle="modal">ورود</a> یا
+                                <a href="{% url 'signin' %}" role="button" data-toggle="modal">ثبت نام</a>
+                            {% endif %}
                         </div>
                     </div>
                 </div> <!-- /social icons -->
